# traffic-flow-visualizer

./: .gitignore  Jenkinsfile  README.md
scripts/: sendReport.sh
server/: Cargo.toml
server/.cargo/: config
server/lib/: README.md
server/src/: binary_message.rs  interfaces.rs  listener.rs  main.rs  websocket.rs
ui/: .eslintrc.js  package-lock.json  package.json  runReport.js
ui/src/: index.js  setupStore.js  setupStore.test.js  setupTests.js  style.css  test.js
ui/src/actions/: websocketConnection.test.js  websocketConnections.js
ui/src/components/: App.js  Connector.js  SVGBar.js  TDPAxis.js  TDPBar.js  TrafficDisplayPyramid.js
ui/src/constants/: index.js
ui/src/reducers/: connectionReducer.js  index.js  trafficReducer.js
ui/src/utilities/: index.js  wsMessage.js
