[package]
name = "server"
version = "0.1.0"
authors = ["nikita-skobov <nskobov.websites@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.22.0"
lazy_static = "*"
ws = "*"
rocket = "*"
ipnetwork = "*"
